--- a/index.html
+++ b/index.html
@@ -13,30 +13,29 @@
   <div class="container">
     <div class="center">
       <div class="content">
-        <img src="./images/image-equilibrium.jpg" alt="">
+        <div class="imghtc">
+          <img src="./images/image-equilibrium.jpg" alt="">
+        </div>
 
-        <h3>Equilibrium #3429</h3>
+        <div class="title"><a href="#">Equilibrium #3429</a></div>
 
         <p> Our Equilibrium collection promotes balance and calm.</p>
 
         <div class="price">
-          <span class="eth"><img src="./images/icon-ethereum.svg" alt=""> 0.041 ETH</span>
-          <span class="published"><img src="./images/icon-clock.svg" alt=""> 3 days left</span>
+          <div class="eth"><img src="./images/icon-ethereum.svg" alt=""><span>0.041 ETH</span></div>
+          <div class="published"><img src="./images/icon-clock.svg" alt=""><span>3 days left</span></div>
         </div>
         <div class="avatar">
           <img src="./images/image-avatar.png" alt="">
-          <p>Creation of <span class="name">Jules Wyvern</span></p>
+          <p>Creation of <a href="#" class="name">Jules Wyvern</a></p>
         </div>
       </div>
     </div>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Neri Laredo De La Paz</a>.
+      Coded by <a href="https://github.com/nerila1310">Neri Laredo De La Paz</a>.
     </div>
   </div>
 
-  
-
-  
 </body>
 </html>
